# pyjuno

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: build-wheels.yml  python-publish.yml  run-tests.yml
cpp/: CMakeLists.txt  mod.cc
pyjuno/: __init__.py  junoio.py  pyjuno_cpp.pyi
tests/: conftest.py  test_junoio.py
tests/data/: detsim.root
