[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core", "pybind11==3.0.*", "uproot-custom==2.1.*"]

[dependency-groups]
dev = ["black", "pytest", "pre-commit"]

[project]
authors = [{ name = "Mingrun Li", email = "mrli@ihep.ac.cn" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = ["uproot>=5.6.8", "awkward", "uproot-custom==2.1.*"]
description = "Standalone Python module for JUNO"
dynamic = ["version"]
name = "pyjuno"
readme = "README.md"
requires-python = ">=3.9, <3.14"

[tool.black]
exclude = "/(build|dist|env|.git|.tox|.eggs|.venv)/"
line-length = 95
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
cmake.source-dir = "cpp"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.exclude = ["tools"]
sdist.include = ["pyjuno/_version.py"]
wheel.packages = ["pyjuno"]

[tool.setuptools_scm] # Section required
write_to = "pyjuno/_version.py"

[tool.uv]
default-groups = "all"
